# translation-api

./: README.md  pyproject.toml
app/: config.py  main.py  schemas.py  translation.py
