[project]
name = "translation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "deepl>=1.19.1",
    "fastapi>=0.115.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
